# quick-engine

./: .gitignore  .gitmodules
.github/workflows/: build.yml
.mimocode/skills/check-test-impact/: SKILL.md
qjs2j/: CMakeLists.txt  README.md
qjs2j/examples/: HelloQuickJs.java
qjs2j/src/main/c/: qjs_callback.c  qjs_console.c  qjs_jni.h  qjs_timer.c  qjs_util.c  quickjs_jni.c
qjs2j/src/main/java/io/github/quickjsng/: JsFunction.java  NativeLoader.java  QuickJs.java  QuickJsException.java
qjs2j/src/test/java/io/github/quickjsng/: QuickJsTest.java
